Fix Take Attendance bleeding over border and both new attendance and new grade now add correctly

--- a/app/assets/stylesheets/elogix.scss
+++ b/app/assets/stylesheets/elogix.scss
@@ -118,7 +118,7 @@ a:link:hover {
   border-radius: 3px;
   display: inline-flex;
   height: 136px;
-  width: 233px;
+  width: 260px;
 }
 
 .main-body-index tr {
